--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "express": "^4.18.1",
+    "express-ws": "^5.0.2",
+    "ffmpeg-installer": "^1.0.2",
+    "fluent-ffmpeg": "^2.1.2",
     "grpc-mock": "^0.7.0",
     "hikopenapi-node": "^1.1.0",
+    "http": "^0.0.1-security",
     "koa": "^2.13.4",
     "koa-router": "^12.0.0",
     "mockjs": "^1.1.0",
+    "websocket-stream": "^5.5.2",
     "ws": "^8.5.0"
   }
 }
