--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "ws": "node ws.js",
+    "flv": "node ./rtsp/rtsp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
