--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "node ws.js",
     "ws": "node ws.js",
+    "ws-xiamen": "node ws-xiamen.js",
     "flv": "node ./rtsp/rtsp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
