--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "hikopenapi-node": "^1.1.0",
     "http": "^0.0.1-security",
+    "iconv-lite": "^0.6.3",
     "koa": "^2.13.4",
     "koa-router": "^12.0.0",
     "mockjs": "^1.1.0",
