--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "dmdb": "^1.0.33801",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
     "ffmpeg-installer": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
+    "hikopenapi-native-node": "^1.0.3",
     "hikopenapi-node": "^1.1.0",
     "http": "^0.0.1-security",
     "iconv-lite": "^0.6.3",
